src/css/constellation.css
/* ... */
@layer Forms {
    :where(:root) {
        accent-color: var(--primary);

        input,
        textarea {
            font-size: var(--font-size-0);
            padding: var(--size-2) var(--size-3);
            border: 1px solid var(--border-color);
            border-radius: var(--size-1);
            background-color: light-dark(var(--neutral-lightest), var(--neutral-darkest));

            &[disabled],
            &[readonly] {
                background-color: var(--background-color);
            }
        }

        textarea {
            resize: vertical;
        }

        input[aria-invalid=false],
        textarea[aria-invalid=false],
        select[aria-invalid=false],
        fieldset[aria-invalid=false] {
            border-color: var(--success);
        }

        input[aria-invalid=true],
        textarea[aria-invalid=true],
        select[aria-invalid=true],
        fieldset[aria-invalid=true] {
            border-color: var(--error);
        }

        input:focus,
        textarea:focus {
            border-color: var(--primary);
            outline: 2px solid var(--primary);
            outline-offset: -1px;
        }

        input[aria-invalid=true]+*,
        textarea[aria-invalid=true]+* {
            color: var(--error);
            margin-block: 0 var(--size-1);
            font-size: var(--font-size-neg-2);
            font-weight: 300;

            &:is(ul, ol) {
                padding-inline: var(--size-3);
            }
        }

        input[type=search] {
            font-size: var(--font-size-1);
            border-width: 2px;
            border-radius: 1000px;
            padding: var(--size-3) var(--size-4);
        }

        input[type="range"] {
            padding: 0;
            width: 20ch;
        }

        input[type=color] {
            /* -webkit-appearance: none;
            -moz-appearance: none;
            appearance: none; */
            padding: 0 var(--size-0);
            margin: 0;
            /* width: var(--size-7); */
            /* height: var(--size-5); */
            /* border: none; */
        }

        /* input[type=color]::-webkit-color-swatch {
            border-radius: var(--size-1);
            border: 2px solid var(--border-color);
        }

        input[type=color]::-moz-color-swatch {
            border-radius: var(--size-1);
            border: 2px solid var(--border-color);
        } */

        input[type=file] {
            padding: var(--size-1);
        }

        input[type=file]::file-selector-button {
            display: inline-block;
            padding: var(--size-1) var(--size-2);
            margin-inline-end: var(--size-2);
            background-color: aqua;
            border: 2px solid var(--border-color);
            border-radius: var(--radius-2);
            font-size: var(--font-size-2);
            font-weight: var(--font-weight-5);
        }

        input[type=file]::file-selector-button:hover {
            background-color: var(--surface-2);
        }

        input[type="checkbox"],
        input[type="radio"] {
            width: var(--size-3);
            height: var(--size-3);
            accent-color: var(--brand-color);
        }

        input:read-only {
            outline: 0;
        }

        /* form {

            label {
                text-wrap: nowrap;
            }

            :where(label:not(:has(input[type=checkbox], input[type=radio]))) {
                display: flex;
                flex-direction: column;

                input {
                    margin-inline: 0;
                }
            }

            fieldset {
                padding: var(--size-2) var(--size-3);
                margin: var(--size-1);
                margin-block-start: var(--size-6);
                border: 2px solid var(--surface-2);
                border-radius: var(--radius-2);
                position: relative;

                legend {
                    position: absolute;
                    top: calc(var(--size-5) * -1);
                    left: calc(var(--size-1) * -1);
                    text-wrap: nowrap;
                }
            }

            footer {
                display: flex;
                justify-content: end;
                gap: var(--size-3);
                padding-block: var(--size-3);
            }

            button,
            input[type=submit],
            a[role=button] {
                padding: var(--size-3) var(--size-4);
                margin: 0;
            }
        } */

        /* select,
        ::picker(select) {
            appearance: base-select;
        }

        select {
            padding: var(--size-2) var(--size-3);
            margin: var(--size-1);
            border: 2px solid var(--surface-2);
            border-radius: var(--radius-2);
            background-position: -10px;

            button {
                font-size: var(--font-size-1);
                font-weight: var(--font-weight-2);
                background-color: var(--background-color);
                color: var(--color);
                border: none;
                padding: 0;
                margin: 0;
            }

            option {
                margin: 0;
                padding-inline: var(--size-2);
                border-radius: var(--radius-2);
            }
        }

        select:hover {
            background-color: var(--surface-1);

            button {
                background-color: var(--surface-1);
            }
        }

        ::picker(select) {
            padding: var(--size-1);
            border: 2px solid var(--surface-2);
            border-radius: var(--radius-2);
            background-color: var(--surface-1);
            top: calc(anchor(bottom) + 1px);
        }

        select::picker-icon {
            color: var(--color);
            transition: 0.4s rotate;
        }

        select:open::picker-icon {
            rotate: 180deg;
        } */
    }
}
/* ... */

